# Beedget

./: .gitignore  Cargo.toml  com.github.matbme.beedget.json  meson.build
data/: beedget.gresource.xml  com.github.matbme.beedget.appdata.xml.in  com.github.matbme.beedget.desktop.in  com.github.matbme.beedget.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: create-group-dialog.blp  create-transaction-dialog.blp  date-time-picker.blp  empty-dialog.blp  group-content.blp  group-dialog.blp  group-list-row-content.blp  group-row.blp  style.css  transaction-dialog.blp  transaction-row.blp  window.blp
data/ui/cards/: monthly-expenses.blp  previous-months.blp
po/: POTFILES
src/: application.rs  config.rs  lib.rs  main.rs  meson.build  util.rs  window.rs
src/dialogs/: create_group_dialog.rs  create_transaction_dialog.rs  group_dialog.rs  mod.rs  transaction_dialog.rs
src/models/: data_object.rs  group.rs  mod.rs  save_data.rs  transaction.rs
src/widgets/: date_time_picker.rs  empty_dialog.rs  group_content.rs  group_list_row_content.rs  group_row.rs  mod.rs  transaction_row.rs
src/widgets/cards/: mod.rs  monthly_expenses.rs  previous_months.rs
